# video-rag

./: README.md  env.template  explain.drawio  main.py  pyproject.toml  requirement.txt
src/: config.py  embedding.py  ingest.py  main.py  reset.py  search.py  utils.py  vector_database.py
