[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "video-rag"
version = "0.1.0"
authors = [
  { name="Cyrus Mobini", email="cyrus.mobini@gmail.com" },
]
license = { text = "MIT" }
description = "Retrieval Augmented Generation For videos using multi-modal embedding models and vector databases."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain_chroma~=0.1.4",
    "langchain-community~=0.3.1",
    "moviepy~=1.0.3",
    "openai-whisper==20240930",
    "webvtt-py~=0.5.1",
    "opencv-python~=4.10.0.84",
]

[project.urls]
homepage = "https://github.com/cyrus2281/video-rag"
repository = "https://github.com/cyrus2281/video-rag"
documentation = "https://github.com/cyrus2281/video-rag/blob/main/notebook/video_rag.ipynb"

[tool.hatch.build.targets.wheel]
packages = ["src"] 

[project.scripts]
video-rag = "src.main:main"
